<resources>
    <string name="app_name">LazyOrder</string>
    <string name="user_name">账号</string>
    <string name="hint_number">请输入手机号</string>
    <string name="password">密码</string>
    <string name="hint_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="register">注册</string>
    <string name="get_message">获取验证码</string>
    <string name="input_message">输入验证码</string>
    <string name="hint_password_again">请再次输入密码</string>
    <string name="first_location"></string>
    <string name="choose_location">选择地址</string>
    <string name="add_location">新增地址</string>
    <string name="local_city">淮安市</string>
    <string name="hint_search">请输入收货地址</string>
    <string name="search">搜索</string>
    <string name="mylocation">我的收货地址</string>
    <string name="nearlocation">附近地址</string>
    <string name="addlocation">添加收货地址</string>
    <string name="save">保存</string>
    <string name="linkman">联系人</string>
    <string name="hint_name">请输入姓名</string>
    <string name="man">先生</string>
    <string name="woman">女士</string>
    <string name="phonenumber">手机号</string>
    <string name="location">地址</string>
    <string name="hint_location">请选择地址</string>
    <string name="detail_location">详细地址</string>
    <string name="hint_detail_location">请输入详细地址</string>
    <string name="personal_center">个人中心</string>
    <string name="login_register">登录/注册</string>
    <string name="my_location">我的地址</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_credit">我的积分</string>
    <string name="my_discount">我的优惠</string>
    <string name="order">订单</string>
    <string name="shopkind">商家分类</string>
    <string name="intelligentsort">智能排序</string>
    <string name="screen">筛选</string>
    <string name="example_shop_name">小米粥道</string>
    <string name="example_time_number">25</string>
    <string name="example_time">分钟</string>
    <string name="example_distance_number">3.4</string>
    <string name="example_distance">km</string>
    <string name="example_salesvolume_number">450</string>
    <string name="example_salesvolume">月售</string>
    <string name="example_salesvolume_dan">单</string>
    <string name="example_start_dispatch">起送</string>
    <string name="rmb">¥</string>
    <string name="example_start_price">45</string>
    <string name="example_dispatch">配送</string>
    <string name="example_dispatch_price">5</string>
    <string name="order_goods">点菜</string>
    <string name="evaluate">评价</string>
    <string name="detail">详情</string>
    <string name="choose_order">选购下单</string>
    <string name="example_location">合肥工业大学翡翠湖新区六号楼</string>
    <string name="example_name">小明</string>
    <string name="example_phone">17751919987</string>
    <string name="order_phone">联系电话：</string>
    <string name="order_location">商铺地址：</string>
    <string name="order_time">配送时间：</string>
    <string name="example_order_time">08:00-22:00</string>
    <string name="order_message">配送信息：</string>
    <string name="example_order_message">由商家配送</string>
    <string name="all_credit">综合评分</string>
    <string name="example_all_credit">4.8</string>
    <string name="dispatch_credit">配送评分</string>
    <string name="shop_credit">商家评分</string>
    <string name="example_evaluate_phone">1775****987</string>
    <string name="example_evaluate_date">2017-02-28 17:10</string>
    <string name="example_evaluate_time_number">57</string>
    <string name="example_evaluate_time">分钟送达</string>
    <string name="example_evaluate_message">味道很好吃，送的也很快.</string>
    <string name="orders_state">已完成</string>
    <string name="orders_date">下单时间：</string>
    <string name="price">总价：</string>
    <string name="one_more">再来一单</string>
    <string name="example_good_name">皮蛋瘦肉粥</string>
    <string name="hot_goods">热销</string>
    <string name="empty_cart">未选中商品</string>
    <string name="start_price">差¥45起送</string>
    <string name="shopcart">购物车</string>
    <string name="empty_shopcart">清空购物车</string>
    <string name="no_location">已有地址不在配送范围</string>
    <string name="complete_time">送达时间</string>
    <string name="sumbit_order">提交订单</string>
    <string name="example_comlete_time">立即送出（大约15.30送达）</string>
    <string name="pay_way">支付方式</string>
    <string name="pay_online">在线支付</string>
    <string name="discount">优惠券</string>
    <string name="nothing_used">暂无可用</string>
    <string name="dispatch_way">配送方式</string>
    <string name="shop_dispatch">商家配送</string>
    <string name="all_price">总计</string>
    <string name="person_number">用餐人数</string>
    <string name="detail_person_number">以便商家给您带够餐具</string>
    <string name="remark">备注</string>
    <string name="detail_remark">口味、偏好等要求</string>
    <string name="need_pay">需要支付</string>
    <string name="pay_order">支付订单</string>
    <string name="alipay">支付宝支付</string>
    <string name="detail_alipay">数亿用户都在用，安全可托付</string>
    <string name="go_pay">去支付</string>
    <string name="detail_order">订单详情</string>
    <string name="detail_order_state">订单已完成</string>
    <string name="call_shop">联系商家</string>
    <string name="order_message_1">配送信息</string>
    <string name="orders_message">订单信息</string>
    <string name="order_number">订单号</string>
    <string name="example_order_number">151515154645</string>
    <string name="orders_time">下单时间</string>
    <string name="copy">复制</string>
    <string name="add_shopcart">加入购物车</string>
    <string name="good_detail">商品详情</string>
    <string name="good_describe">商品描述</string>
    <string name="example_good_detail">最畅销的口味，最独特的味道</string>
    <string name="now_location">定位到当前位置</string>
    <string name="hint_evaluate">商品味道如何，服务是否周到（不少于15字）</string>
    <string name="submit_evaluate">提交评论</string>
    <string name="local_location_city">当前定位城市</string>
</resources>
