<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/ordersfragment_list_image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/example"
        android:scaleType="fitXY"/>

    <TextView
        android:id="@+id/ordersfragment_list_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/example_shop_name"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/ordersfragment_list_image"
        android:layout_marginStart="12dp" />
    <TextView
        android:id="@+id/ordersfragment_list_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/ordersfragment_list_name"
        android:text="@string/orders_state"
        android:textSize="15sp"
        android:textColor="@color/themeColor"/>
    <TextView
        android:id="@+id/ordersfragment_list_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_alignLeft="@id/ordersfragment_list_name"
        android:layout_below="@id/ordersfragment_list_name"
        android:text="@string/orders_date"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/ordersfragment_list_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_alignTop="@id/ordersfragment_list_d"
        android:layout_toRightOf="@id/ordersfragment_list_d"
        android:layout_below="@id/ordersfragment_list_name"
        android:text="@string/example_evaluate_date"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/ordersfragment_list_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_alignLeft="@id/ordersfragment_list_name"
        android:layout_below="@id/ordersfragment_list_d"
        android:text="@string/price"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/ordersfragment_list_rmb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_alignTop="@id/ordersfragment_list_p"
        android:layout_toRightOf="@id/ordersfragment_list_p"
        android:text="@string/rmb"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/ordersfragment_list_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/ordersfragment_list_p"
        android:layout_toRightOf="@id/ordersfragment_list_rmb"
        android:text="@string/example_start_price"
        android:textSize="14sp"/>


    <Button
        android:id="@+id/ordersfragment_list_right_btn"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:textSize="15dp"
        android:focusable="false"
        android:layout_below="@id/ordersfragment_list_price"
        android:text="@string/evaluate"
        android:textColor="@color/one_more_color"
        android:background="@drawable/ordersfragment_button_selector"/>
    <Button
        android:id="@+id/ordersfragment_list_left_btn"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginRight="10dp"
        android:focusable="false"
        android:layout_toLeftOf="@id/ordersfragment_list_right_btn"
        android:textSize="15dp"
        android:layout_below="@id/ordersfragment_list_price"
        android:text="@string/one_more"
        android:textColor="@color/one_more_color"
        android:background="@drawable/ordersfragment_button_selector"/>
</RelativeLayout>