<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/spilt"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/white">
        <ImageView
            android:id="@+id/my_collect_list_image"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:src="@drawable/example"/>
        <LinearLayout
            android:id="@+id/first_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/my_collect_list_image"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:padding="5dp">
            <TextView
                android:id="@+id/my_collect_list_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/example_shop_name"
                android:textSize="15sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/my_collect_list_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_distance_number"
                android:textSize="15sp"/>
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/example_distance"
                android:textSize="14sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/second_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/first_linear"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:padding="5dp">
            <ImageView
                android:id="@+id/my_collect_list_star1"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/fullstar"/>
            <ImageView
                android:id="@+id/my_collect_list_star2"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/fullstar"/>
            <ImageView
                android:id="@+id/my_collect_list_star3"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/fullstar"/>
            <ImageView
                android:id="@+id/my_collect_list_star4"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/star"/>
            <ImageView
                android:id="@+id/my_collect_list_star5"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/star"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:text="@string/example_salesvolume"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/my_collect_list_salesvolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/example_salesvolume_number"
                android:textSize="14sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/example_salesvolume_dan"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/my_collect_list_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/example_time_number"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/example_time"
                android:textSize="14sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/third_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/first_linear"
            android:layout_alignBottom="@id/my_collect_list_image"
            android:paddingLeft="5dp"
            android:paddingBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/example_start_dispatch"
                android:textSize="14sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/rmb"/>
            <TextView
                android:id="@+id/my_collect_list_start_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_start_price"/>
            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/spilt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/example_dispatch"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/rmb"/>
            <TextView
                android:id="@+id/my_collect_list_dispatch_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_dispatch_price"/>
        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/spilt"/>
</LinearLayout>