<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:gravity="center"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/choose_location_list_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_name"
                android:textSize="15sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/choose_location_list_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/man"
                android:textSize="15sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/choose_location_list_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/example_phone"
                android:textSize="15sp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <TextView
            android:id="@+id/choose_location_list_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/example_location"
            android:textSize="14sp" />

    </LinearLayout>
</LinearLayout>