<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.example.xuhan.lazyorder.activity.AddLocationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionBarSize"
        android:orientation="horizontal"
        android:padding="@dimen/actionPadding"
        android:gravity="center"
        android:background="@color/themeColor">
        <ImageView
            android:id="@+id/add_location_back_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:src="@drawable/leftwhite"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/addlocation"
            android:textSize="20sp"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/save_location_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/save"
            android:textSize="18sp"
            android:textColor="@color/white"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:id="@+id/location_linkman_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:text="@string/linkman"
            android:textSize="15sp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/location_linkman_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/location_linkman_text"
            android:hint="@string/hint_name"
            android:textSize="15sp"
            android:background="@null"/>
        <TextView
            android:id="@+id/location_first_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignLeft="@id/location_linkman_edit"
            android:layout_below="@id/location_linkman_edit"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@color/spilt"/>
        <RadioGroup
            android:id="@+id/add_location_sex_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/location_first_line"
            android:layout_alignLeft="@id/location_linkman_edit"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/add_location_man_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/man"
                android:textSize="14sp"/>
            <RadioButton
                android:id="@+id/add_location_woman_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/woman"
                android:textSize="14sp"/>
        </RadioGroup>
        <TextView
            android:id="@+id/location_second_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignLeft="@id/location_linkman_text"
            android:layout_below="@id/add_location_sex_group"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@color/spilt"/>
        <TextView
            android:id="@+id/location_phone_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_below="@id/location_second_line"
            android:layout_alignLeft="@id/location_linkman_text"
            android:gravity="center"
            android:text="@string/phonenumber"
            android:textSize="15sp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/location_phone_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/location_phone_text"
            android:layout_alignLeft="@id/location_linkman_edit"
            android:layout_below="@id/location_second_line"
            android:hint="@string/hint_number"
            android:textSize="15sp"
            android:inputType="phone"
            android:background="@null"/>
        <TextView
            android:id="@+id/location_third_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignLeft="@id/location_linkman_text"
            android:layout_below="@id/location_phone_text"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/spilt"/>
        <TextView
            android:id="@+id/location_location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_below="@id/location_third_line"
            android:layout_alignLeft="@id/location_linkman_text"
            android:gravity="center"
            android:text="@string/location"
            android:textSize="15sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/location_location_btn_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/location_phone_text"
            android:layout_below="@id/location_third_line"
            android:layout_alignLeft="@id/location_linkman_edit"
            android:hint="@string/hint_location"
            android:textSize="15sp"
            android:background="@null"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/location_third_line"
            android:src="@drawable/rightlinear"/>
        <TextView
            android:id="@+id/location_fourth_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignLeft="@id/location_linkman_text"
            android:layout_below="@id/location_location_text"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/spilt"/>
        <TextView
            android:id="@+id/location_detail_location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_below="@id/location_fourth_line"
            android:layout_alignLeft="@id/location_linkman_text"
            android:gravity="center"
            android:text="@string/detail_location"
            android:textSize="15sp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/location_detail_location_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/location_phone_text"
            android:layout_below="@id/location_fourth_line"
            android:layout_alignLeft="@id/location_linkman_edit"
            android:hint="@string/hint_detail_location"
            android:textSize="15sp"
            android:background="@null"/>
        <TextView
            android:id="@+id/location_fifth_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignLeft="@id/location_linkman_text"
            android:layout_below="@id/location_detail_location_text"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/spilt"/>

    </RelativeLayout>
</LinearLayout>
